Revision history for POE-Quickie

{{$NEXT}}
    - Exit after --version

0.11  Sat Jul 24 21:11:25 GMT 2010
    - Shut down disconnected IRC components properly
    - Rename "-c" option to "-f" and make "-c" validate the config file

0.10  Mon Jun 28 21:39:05 GMT 2010
    - Print compilation errors if we fail to load a plugin

0.09  Mon Jun 28 21:24:31 GMT 2010
    - Color exceptions red when using terminal colors
    - Make sure we exit on exception when using multiple components

0.08  Mon Jun 28 20:00:32 GMT 2010
    - Fix problem with terminal color codes working across newlines

0.07  Mon Jun 28 19:55:27 GMT 2010
    - Use terminal colors for status messages, to easily differentiate it
      from other output

0.06  Sun Jun 27 08:34:55 GMT 2010
    - Don't print raw protocol lines simply because some plugin happens to
      enable raw events in POE::Component::IRC
    - Install INT signal handler after we load POE::Component::IRC, not
      before. Avoids an issue with Net::DNS (or a dependency of it) clearing
      $SIG{INT} on Perl 5.13.2

0.05  Sat Jun 26 06:08:47 GMT 2010
    - Shut down if we catch an exception in our code

0.04  Sat Jun 26 05:48:13 GMT 2010
    - Don't require server to be specified in a network hash if a default
      one is specified

0.03  Sat Jun 26 04:44:32 GMT 2010
    - Only parse plugin options when not using a config file
    - Set our process name to 'pocoirc'

0.02  Fri Jun 25 20:26:42 GMT 2010
    - Support JSON config files too, not just YAML
    - Add some example output to the documentation

0.01  Fri Jun 25 19:47:14 GMT 2010
    - Initial release