@@ -2,6 +2,7 @@ Revision history for POE-Quickie
 
 {{$NEXT}}
     - Exit after --version
+    - Only daemonize after we've done more sanity checks
 
 0.11  Sat Jul 24 21:11:25 GMT 2010
     - Shut down disconnected IRC components properly
